--- a/views/fbw.ejs
+++ b/views/fbw.ejs
@@ -16,14 +16,14 @@
     <%- include('partials/flash.ejs') %>
 
     <h1>אימון פול בודי</h1>
-    <h3>שמירה על אורח חיים בריא ללא תלות במספר האימונים בשבוע</h3>
+    <!-- <h3>שמירה על אורח חיים בריא ללא תלות במספר האימונים בשבוע</h3> -->
 
     <br>
     
     <div class="trademill">
-        <h1>ריצה</h1>
+        <h1>הליכון</h1>
 
-        <h2><%= excersizes.trademill.name %></h2>
+        <h2><%= excersizes.trademill[0].name %></h2>
         <h3>משך זמן: <%= excersizes.trademill[0].duration %> דקות</h3>
     </div>
 
