--- a/views/workouts/abc.ejs
+++ b/views/workouts/abc.ejs
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABC - Fitness App</title>
 
-    <style>
-        * {
-            text-align: right;
-        }
-    </style>
+    <link rel="stylesheet" href="/styles/workout.css">
+
+    <%- include('../partials/includes.ejs') %>
 </head>
 <body>
+    <%- include('../partials/header.ejs') %>
+
     <h1>ABC אימון</h1>
-    <br>
+    
     <h1>A:</h1>
     
     <div class="chest">
@@ -88,7 +88,7 @@
         </div>
     </div>
 
-    <br>
+    
     <h1>B:</h1>
 
     <div class="back">
@@ -150,7 +150,7 @@
         </div>
     </div>
 
-    <br>
+    
     <h1>C:</h1>
 
     <div class="legs">
