--- a/views/workouts/aerobic.ejs
+++ b/views/workouts/aerobic.ejs
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aerobic - Fitness App</title>
+
+    <link rel="stylesheet" href="/styles/workout.css">
+
+    <%- include('../partials/includes.ejs') %>
 </head>
 <body>
-    <%- include('partials/flash.ejs') %>
+    <%- include('../partials/header.ejs') %>
 
     <h1>אימון אירובי</h1>
-    <br>
+    
 
     <div class="trademill">
         <h1>הליכון</h1>
