--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,28 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Fitness App</title>
+
+    <link rel="stylesheet" href="/styles/register.css">
+
+    <%- include('partials/includes.ejs') %>
 </head>
 <body>
-    <%- include('partials/flash.ejs') %>
+    <%- include('partials/header.ejs') %>
     
-    <h1>Register</h1>
+    <div class="container">
+        <div class="form">
+            <h1>Register</h1>
 
-    <form action="/register" method="POST">
-        <div class="name">
-            <input type="text" placeholder="Username: " name="username" required>
+            <form action="/register" method="POST">
+                <div class="name">
+                    <input type="text" placeholder="Username: " name="username" required>
+                </div>
+        
+                <div class="email">
+                    <input type="email" placeholder="Email: " name="email" required>
+                </div>
+        
+                <div class="password">
+                    <input type="password" placeholder="Password: " name="password" required>
+                </div>
+        
+                <button type="submit">Register</button>
+            </form>
+            
+            <div class="login">
+                <a href="/login">Login</a>
+            </div>
         </div>
-
-        <div class="email">
-            <input type="email" placeholder="Email: " name="email" required>
-        </div>
-
-        <div class="password">
-            <input type="password" placeholder="Password: " name="password" required>
-        </div>
-
-        <button type="submit">Register</button>
-    </form>
-
-    <a href="/login">Login</a>
+    </div>
 </body>
 </html>
