--- a/views/workoutSelection.ejs
+++ b/views/workoutSelection.ejs
@@ -26,7 +26,7 @@
         
                     case 'fbw_or_aerobic_ab_switch': %>
                         <button name="fbw">Full body workout</button>
-                        <button name="aerobic_ab">AB + Aerobic workout</button>
+                        <button name="aerobic_ab_switch">AB + Aerobic workout</button>
                         <% break;
         
                     case 'fbw_or_ab': %>
