--- a/views/workouts/aerobic.ejs
+++ b/views/workouts/aerobic.ejs
@@ -13,49 +13,47 @@
 <body>
     <%- include('../partials/header.ejs') %>
 
-    <h1>אימון אירובי</h1>
-    
-
-    <div class="trademill">
-        <h1>הליכון</h1>
-
-        <div class="1">
-            <h2><%= excersizes.trademill[0].name %></h2>
-            <h3>משך זמן: <%= excersizes.trademill[0].duration %> דקות</h3>
-            <h3>מהירות: <%= excersizes.trademill[0].speed %></h3>
+    <div class="container">
+        <div class="title">
+            <h1>אימון אירובי</h1>
         </div>
 
-        <div class="2">
-            <h2><%= excersizes.trademill[1].name %></h2>
-            <h3>משך זמן: <%= excersizes.trademill[1].duration %> דקות</h3>
-        </div>
+        <div class="workout">
+            <div class="name">
+                <h2>trademill</h2>
+            </div>
 
-        <div class="3">
-            <h2><%= excersizes.trademill[2].name %></h2>
-            <h3>משך זמן: <%= excersizes.trademill[2].duration %> דקות</h3>
-        </div>
-    </div>
+            <div class="excersize">
+                <h2><%= excersizes.trademill[0].name %></h2>
 
-    <div class="abs">
-        <h1>בטן</h1>
+                <div class="video">
+                    <img id="left-arrow" src="/img/arrow_left.png" alt="">
+                    <div class="view">
+                        <iframe src="https://www.youtube.com/embed/B2exKGkFp50" width="600" height="315" frameborder="0"></iframe>
+                    </div>
 
-        <div class="1">
-            <h2><%= excersizes.abs[0].name %></h2>
-            <h3>סטים: <%= excersizes.abs[0].sets %></h3>
-            <h3>חזרות: <%= excersizes.abs[0].reps %></h3>
-        </div>
-        
-        <div class="2">
-            <h2><%= excersizes.abs[1].name %></h2>
-            <h3>סטים: <%= excersizes.abs[1].sets %></h3>
-            <h3>חזרות: <%= excersizes.abs[1].reps %></h3>
-        </div>
+                    <img id="right-arrow" src="/img/arrow_right.png" alt="">
+                </div>
+                
+                <ul class="info">
+                    <li><%= excersizes.trademill[0].duration %> דקות</li>
+                    <li>מהירות <%= excersizes.trademill[0].speed %></li>
+                </ul>
+            </div>
 
-        <div class="3">
-            <h2><%= excersizes.abs[2].name %></h2>
-            <h3>סטים: <%= excersizes.abs[2].sets %></h3>
-            <h3>משך זמן: <%= excersizes.abs[2].duration %></h3>
+            <form action="/workouts" method="POST" style="display: none">
+                <h2>דרג את קושי האימון</h2>
+            
+                <button type="submit" name="-2">קשה מדי</button>
+                <button type="submit" name="0">מעולה</button>
+                <button type="submit" name="2">קל מידי</button>
+            </form>
         </div>
     </div>
+
+    <script>
+        var excersizes = JSON.parse('<%- JSON.stringify(excersizes) %>');
+        var index = JSON.parse('<%- JSON.stringify(index) %>');
+    </script>
 </body>
 </html>
