--- a/views/partials/includes.ejs
+++ b/views/partials/includes.ejs
@@ -2,3 +2,5 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/styles/main.css">
 <link rel="stylesheet" href="/styles/nav.css">
+
+<script src="/scripts/display_workout.js" defer></script>
