--- a/views/workouts/fbw.ejs
+++ b/views/workouts/fbw.ejs
@@ -28,8 +28,9 @@
 
                 <div class="video">
                     <img id="left-arrow" src="/img/arrow_left.png" alt="">
-
-                    <iframe src="https://www.youtube.com/embed/fnDM2jJ2yeI" width="600" height="315" frameborder="0"></iframe>
+                    <div class="view">
+                        <iframe src="https://www.youtube.com/embed/B2exKGkFp50" width="600" height="315" frameborder="0"></iframe>
+                    </div>
 
                     <img id="right-arrow" src="/img/arrow_right.png" alt="">
                 </div>
@@ -38,262 +39,20 @@
                     <li>10 minutes</li>
                 </ul>
             </div>
-        </div>
 
-        <script>
-            const workoutName = $('.name h2');
-            const excersize = $('.excersize h2');
-            const video = $('.video iframe');
-            const info = $('.info');
-            const leftArrow = $('#left-arrow');
-            const rightArrow = $('#right-arrow');
-
-            var excersizes = JSON.parse('<%- JSON.stringify(excersizes) %>');
-
-            let counter = 0;
-            let excersizeIndex = 1;
-            let currentExcersize = Object.keys(excersizes)[excersizeIndex];
-
-            let finalExcersize = Object.keys(excersizes)[Object.keys(excersizes).length - 1];
-            let finalExcersizeIndex = Object.keys(finalExcersize).length-1;
-
-            function updateWorkout(name, excersizeName, t_info) {
-                info.html('');
-                workoutName.text(name);
-                excersize.text(excersizeName);
-
-                for (let i = 0; i < Object.keys(t_info).length; i++) {
-                    const type = Object.keys(t_info)[i];
-                    const value = t_info[type];
-
-                    info.append(`<li>${value} ${type}</li>`);
-                }
-            }
-
-
-            rightArrow.on('click', () => {
-                const updatedInfo = {};
-
-                if (counter + 1 < excersizes[currentExcersize].length) {
-                    counter++;
-                    excersize.text(excersizes[currentExcersize][counter].name);
-
-                    const allInfo = {
-                        kg: excersizes[currentExcersize][counter].kg,
-                        sets: excersizes[currentExcersize][counter].sets,
-                        reps: excersizes[currentExcersize][counter].reps,
-                        duration: excersizes[currentExcersize][counter].duration,
-                        speed: excersizes[currentExcersize][counter].speed
-                    };
-
-                    for (let i = 0; i < Object.keys(allInfo).length; i++) {
-                        if (allInfo[Object.keys(allInfo)[i]] !== undefined) {
-                            updatedInfo[Object.keys(allInfo)[i]] = allInfo[Object.keys(allInfo)[i]];
-                        }
-                    }
-
-                    updateWorkout(
-                        currentExcersize,
-                        excersizes[currentExcersize][counter].name,
-                        updatedInfo
-                    );
-                } else {
-                    counter = 0;
-                    excersizeIndex++;
-                    currentExcersize = Object.keys(excersizes)[excersizeIndex];
-
-                    if (currentExcersize == finalExcersize) {
-                        console.log("final");
-                        rightArrow.remove();
-                    }
-
-                    const allInfo = {
-                        kg: excersizes[currentExcersize][counter].kg,
-                        sets: excersizes[currentExcersize][counter].sets,
-                        reps: excersizes[currentExcersize][counter].reps,
-                        duration: excersizes[currentExcersize][counter].duration,
-                        speed: excersizes[currentExcersize][counter].speed
-                    };
-
-                    for (let i = 0; i < Object.keys(allInfo).length; i++) {
-                        if (allInfo[Object.keys(allInfo)[i]] !== undefined) {
-                            updatedInfo[Object.keys(allInfo)[i]] = allInfo[Object.keys(allInfo)[i]];
-                        }
-                    }
-
-                    updateWorkout(
-                        currentExcersize, 
-                        excersizes[currentExcersize][counter].name,
-                        updatedInfo
-                    );
-                }
-
-            });
-
-            leftArrow.on('click', () => {
-                if (counter - 1 != -1) {
-                    counter--;
-                    excersize.text(excersizes[currentExcersize][counter].name);
-                } else {
-                    excersizeIndex--;
-                    currentExcersize = Object.keys(excersizes)[excersizeIndex];
-                    counter = excersizes[currentExcersize].length - 1;
-
-                    updateWorkout(currentExcersize, excersizes[currentExcersize][counter].name);
-                }
-            });
-        </script>
-    
-        <!-- <div class="trademill">
-            <h1>הליכון</h1>
-    
-            <h2><%= excersizes.trademill[0].name %></h2>
-            <h3>משך זמן: <%= excersizes.trademill[0].duration %> דקות</h3>
-        </div>
-    
-        <div class="chest">
-            <h1>חזה</h1>
-    
-            <div class="1">
-                <h2><%= excersizes.chest[0].name %></h2>
-                <h3>סטים: <%= excersizes.chest[0].sets %></h3>
-                <h3>חזרות: <%= excersizes.chest[0].reps %></h3>
-                <h3>משקל: <%= excersizes.chest[0].kg %></h3>
-            </div>
-    
-            <div class="2">
-                <h2><%= excersizes.chest[1].name %></h2>
-                <h3>סטים: <%= excersizes.chest[1].sets %></h3>
-                <h3>חזרות: <%= excersizes.chest[1].reps %></h3>
-                <h3>משקל: <%= excersizes.chest[1].kg %></h3>
-            </div>
-        </div>
-    
-        <div class="legs">
-            <h1>רגליים</h1>
-    
-            <div class="1">
-                <h2><%= excersizes.legs[0].name %></h2>
-                <h3>סטים: <%= excersizes.legs[0].sets %></h3>
-                <h3>חזרות: <%= excersizes.legs[0].reps %></h3>
-                <h3>משקל: <%= excersizes.legs[0].kg %></h3>
-            </div>
+            <form id="feedback" action="/workouts" method="POST" style="display: none;">
+                <h2>דרג את קושי האימון</h2>
             
-            <div class="2">
-                <h2><%= excersizes.legs[1].name %></h2>
-                <h3>סטים: <%= excersizes.legs[1].sets %></h3>
-                <h3>חזרות: <%= excersizes.legs[1].reps %></h3>
-                <h3>משקל: <%= excersizes.legs[1].kg %></h3>
-            </div>
-    
-            <div class="3">
-                <h2><%= excersizes.legs[2].name %></h2>
-                <h3>סטים: <%= excersizes.legs[2].sets %></h3>
-                <h3>חזרות: <%= excersizes.legs[2].reps %></h3>
-                <h3>משקל: <%= excersizes.legs[2].kg %></h3>
-            </div>
+                <button type="submit" name="-2">קשה מדי</button>
+                <button type="submit" name="0">מעולה</button>
+                <button type="submit" name="2">קל מידי</button>
+            </form>
         </div>
-    
-        <div class="back">
-            <h1>גב</h1>
-    
-            <div class="1">
-                <h2><%= excersizes.back[0].name %></h2>
-                <h3>סטים: <%= excersizes.back[0].sets %></h3>
-                <h3>חזרות: <%= excersizes.back[0].reps %></h3>
-                <h3>משקל: <%= excersizes.back[0].kg %></h3>
-            </div>
-            
-            <div class="2">
-                <h2><%= excersizes.back[1].name %></h2>
-                <h3>סטים: <%= excersizes.back[1].sets %></h3>
-                <h3>חזרות: <%= excersizes.back[1].reps %></h3>
-                <h3>משקל: <%= excersizes.back[1].kg %></h3>
-            </div>
-    
-            <div class="3">
-                <h2><%= excersizes.back[2].name %></h2>
-                <h3>סטים: <%= excersizes.back[2].sets %></h3>
-                <h3>חזרות: <%= excersizes.back[2].reps %></h3>
-            </div>
-        </div>
-    
-        <div class="shoulders">
-            <h1>כתפיים</h1>
-    
-            <div class="1">
-                <h2><%= excersizes.shoulders[0].name %></h2>
-                <h3>סטים: <%= excersizes.shoulders[0].sets %></h3>
-                <h3>חזרות: <%= excersizes.shoulders[0].reps %></h3>
-                <h3>משקל: <%= excersizes.shoulders[0].kg %></h3>
-            </div>
-            
-            <div class="2">
-                <h2><%= excersizes.shoulders[1].name %></h2>
-                <h3>סטים: <%= excersizes.shoulders[1].sets %></h3>
-                <h3>חזרות: <%= excersizes.shoulders[1].reps %></h3>
-                <h3>משקל: <%= excersizes.shoulders[1].kg %></h3>
-            </div>
-        </div>
-    
-        <div class="triceps">
-            <h1>יד אחורית</h1>
-    
-            <div class="1">
-                <h2><%= excersizes.triceps[0].name %></h2>
-                <h3>סטים: <%= excersizes.triceps[0].sets %></h3>
-                <h3>חזרות: <%= excersizes.triceps[0].reps %></h3>
-                <h3>משקל: <%= excersizes.triceps[0].kg %></h3>
-            </div>
-            
-            <div class="2">
-                <h2><%= excersizes.triceps[1].name %></h2>
-                <h3>סטים: <%= excersizes.triceps[1].sets %></h3>
-                <h3>חזרות: <%= excersizes.triceps[1].reps %></h3>
-            </div>
-        </div>
-    
-        <div class="biceps">
-            <h1>יד קדמית</h1>
-    
-            <div class="1">
-                <h2><%= excersizes.biceps[0].name %></h2>
-                <h3>סטים: <%= excersizes.biceps[0].sets %></h3>
-                <h3>חזרות: <%= excersizes.biceps[0].reps %></h3>
-                <h3>משקל: <%= excersizes.biceps[0].kg %></h3>
-            </div>
-            
-            <div class="2">
-                <h2><%= excersizes.biceps[1].name %></h2>
-                <h3>סטים: <%= excersizes.biceps[1].sets %></h3>
-                <h3>חזרות: <%= excersizes.biceps[1].reps %></h3>
-                <h3>משקל: <%= excersizes.biceps[1].kg %></h3>
-            </div>
-        </div>
-    
-        <div class="abs">
-            <h1>בטן</h1>
-    
-            <div class="1">
-                <h2><%= excersizes.abs[0].name %></h2>
-                <h3>סטים: <%= excersizes.abs[0].sets %></h3>
-                <h3>חזרות: <%= excersizes.abs[0].reps %></h3>
-            </div>
-            
-            <div class="2">
-                <h2><%= excersizes.abs[1].name %></h2>
-                <h3>סטים: <%= excersizes.abs[1].sets %></h3>
-                <h3>חזרות: <%= excersizes.abs[1].reps %></h3>
-            </div>
-        </div>
-    
-        <form action="/workouts" method="POST">
-            <h2>דרג את קושי האימון</h2>
-        
-            <button type="submit" name="-2">קשה מדי</button>
-            <button type="submit" name="0">מעולה</button>
-            <button type="submit" name="2">קל מידי</button>
-        </form> -->
     </div>
+
+    <script>
+        var excersizes = JSON.parse('<%- JSON.stringify(excersizes) %>');
+        var index = JSON.parse('<%- JSON.stringify(index) %>');
+    </script>
 </body>
 </html>
