finished mixed workout pages (aerobic+ab, aerobic+ab switch...)

--- a/views/workouts/aerobic.ejs
+++ b/views/workouts/aerobic.ejs
@@ -41,7 +41,7 @@
                 </ul>
             </div>
 
-            <form action="/workouts" method="POST" style="display: none">
+            <form id="feedback" action="/workouts" method="POST" style="display: none">
                 <h2>דרג את קושי האימון</h2>
             
                 <button type="submit" name="-2">קשה מדי</button>
