--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -24,20 +24,26 @@ a, a:hover, a:focus, a:active {
 }
 
 .success-alert {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: rgba(1, 255, 1, 0.418);
     text-align: center;
     border-radius: 5px;
-    margin-top: 3vh;
     padding: 8px 10px;
     cursor: pointer;
     z-index: 100;
 }
 
 .error-alert {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: rgba(255, 1, 1, 0.418);
     text-align: center;
     border-radius: 5px;
-    margin-top: 3vh;
     padding: 8px 10px;
     cursor: pointer;
     z-index: 100;
