--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,8 +14,10 @@
 
     <div class="start-button">
         <div class="text">
-            <h1>Lorem Ipsum</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit harum iste rem</p>
+            <div class="main-title">
+                <h1>Fitness App</h1>
+            </div>
+            <p>תוכנת אימונים המותאמת לצרכים האישיים שלך</p>
         </div>
         
         <a href="/user_define">Start working out</a>
