--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
             <div class="main-title">
                 <h1>Fitness App</h1>
             </div>
-            <p>תוכנת אימונים המותאמת לצרכים האישיים שלך</p>
+            <p>תוכנת אימונים המתאימה את עצמה לצרכיך</p>
         </div>
         
         <a href="/user_define">Start working out</a>
