--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -8,8 +8,11 @@
 }
 
 body {
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(13,80,171,1) 0%, rgba(42,181,209,1) 100%);
-
+    height: 100%;
+    background: url('../img/background-gym.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 a, a:hover, a:focus, a:active {
