--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,7 +9,7 @@
 
 body {
     height: 100%;
-    background: url('../img/background-gym.png');
+    background: url('../img/wallpaper.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
