--- a/views/user_define.ejs
+++ b/views/user_define.ejs
@@ -19,15 +19,15 @@
 
             <form action="/user_define" method="POST">
                 <div class="height">
-                    <input type="number" name="height" placeholder="Height in CM: ">
+                    <input type="number" name="height" placeholder="Height in CM: " required>
                 </div>
         
                 <div class="weight">
-                    <input type="number" name="weight" placeholder="Weight in KG: ">
+                    <input type="number" name="weight" placeholder="Weight in KG: " required>
                 </div>
         
                 <div class="schedule">
-                    <input type="number" name="schedule" placeholder="Workouts per week: ">
+                    <input type="number" name="schedule" placeholder="Workouts per week: " required>
                 </div>
         
                 <button type="submit">Continue</button>
