--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,5 +22,7 @@
         
         <a href="/user_define">Start working out</a>
     </div>
+
+    <%- include('partials/serviceWorker.ejs') %>
 </body>
 </html>
