--- a/views/partials/includes.ejs
+++ b/views/partials/includes.ejs
@@ -2,5 +2,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/styles/main.css">
 <link rel="stylesheet" href="/styles/nav.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+<link rel="manifest" href="/manifest.json">
 
+<script src="/scripts/script.js" defer></script>
 <script src="/scripts/display_workout.js" defer></script>
