--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,4 +13,29 @@
         /
         <a href="/register">register</a>
     </div>
+
+    <!-- MOBILE -->
+    <div class="drop-down">
+        <i class="fas fa-bars"></i>
+        <i class="fas fa-times" style="display: none;"></i>
+    </div>
+</div>
+
+<div class="mobile-nav">
+    <div class="links">
+        <div class="login">
+            <a href="/login">login</a>
+        </div>
+
+        <div class="register">
+            <a href="/register">register</a>
+        </div>
+    </div>
+</div>
+
+<div class="install-app">
+    <button>Install</button>
+    <p>Get our free app. Enjoy a better experience!</p>
+
+    <i class="fas fa-times"></i>
 </div>
