--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,5 +1,4 @@
 .start-button {
-    width: 100%;
     text-align: center;
     margin-top: 20vh;
 }
@@ -13,7 +12,8 @@
     font-size: 16px;
     text-align: center;
     background-color: rgb(217, 226, 238);
-    padding: .7vw 1vw;
+    padding: 15px 10px;
+    border-radius: 4px;
 }
 
 .main-title {
