--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,10 +4,10 @@
     align-items: center;
     background-color: #255478;
     font-weight: 300;
+    padding: 25px 18px;
 }
 
 .nav div {
-    padding: 2vh 2vw;
     color: #fff;
 }
 
@@ -17,4 +17,104 @@
 
 .nav .links {
     font-size: 18px;
+}
+
+.nav .logo img {
+    cursor: pointer;
+}
+
+.drop-down {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.mobile-nav {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: #255478;
+}
+
+.mobile-nav .links {
+    margin-top: 40px;
+}
+
+.mobile-nav .links div {
+    text-align: center;
+    padding: 30px 0;
+}
+
+.mobile-nav .links a {
+    font-size: 30px;
+    font-weight: 300;
+    color: #fff;
+    padding: 0 10px 7px 10px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.712);
+}
+
+.install-app {
+    width: 100%;
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    background-color: rgb(31, 82, 139, 0.7);
+    padding: 30px 10px;
+}
+
+.install-app button {
+    background-color: rgb(217, 226, 238);
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.install-app p {
+    display: inline-block;
+    color: rgb(217, 238, 255);
+    font-size: 13px;
+    text-align: center;
+}
+
+.install-app .fa-times {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 8px;
+    font-size: 11px;
+    color: white;
+    cursor: pointer;
+}
+
+@media (max-width: 460px) {
+    .drop-down {
+        display: flex;
+        align-items: center;
+    }
+
+    .main {
+        display: none;
+    }
+
+    .nav .links {
+        display: none;
+    }
+
+    .nav .logo img {
+        width: 75%;
+        height: 75%;
+    }
+
+    .start-button {
+        margin-top: 12vh;
+    }
+
+    .start-button .text {
+        margin-bottom: 10vh;
+    }
 }
