--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
 
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('scripts/service-worker.js');
+            navigator.serviceWorker.register('service-worker.js', { scope: '/scripts' });
         }
     </script>
 </body>
