--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
 
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('service-worker.js', { scope: '/scripts' });
+            navigator.serviceWorker.register('/service-worker.js');
         }
     </script>
 </body>
