--- a/views/partials/includes.ejs
+++ b/views/partials/includes.ejs
@@ -7,3 +7,4 @@
 
 <script src="/scripts/script.js" defer></script>
 <script src="/scripts/display_workout.js" defer></script>
+<script src="/service-worker.js" defer></script>
