--- a/views/partials/includes.ejs
+++ b/views/partials/includes.ejs
@@ -1,11 +1,5 @@
 <meta http-equiv="Content-Security-Policy" 
-    content="
-    default-src 'self'; 
-    script-src 'self' 'sha256-biLFinpqYMtWHmXfkA1BPeCY0/fNt46SAZ+BBk5YUog=' 'sha256-KRQtBkudKRp4D0EDJdvOdC0a28/iHuam287ETSHSEoY=' 'sha256-VrWMCxa1blUivLVrFXI9IDIucCRk2cyRnDUhnyoZYG8='; 
-    script-src-elem 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js;
-    style-src-elem 'self' https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css;
-    img-src 'self' data:;
-">
+    content="img-src data:">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
