--- a/views/partials/includes.ejs
+++ b/views/partials/includes.ejs
@@ -1,5 +1,4 @@
-<meta http-equiv="Content-Security-Policy" 
-    content="img-src 'self' data:;">
+<meta http-equiv="Content-Security-Policy" content="img-src 'self' data:image/png;">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
