--- a/views/partials/includes.ejs
+++ b/views/partials/includes.ejs
@@ -1,10 +1,6 @@
-<meta http-equiv="Content-Security-Policy" 
-    content="
-    default-src *;
-    img-src * 'self' data: https:;
-    script-src 'self' 'unsafe-inline' *;
-    style-src 'self' 'unsafe-inline' *;
-">
+<meta http-equiv="Content-Security-Policy" content="default-src *;
+   img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
+   style-src  'self' 'unsafe-inline' *">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
