--- a/views/partials/includes.ejs
+++ b/views/partials/includes.ejs
@@ -1,11 +1,9 @@
-<meta http-equiv="Content-Security-Policy" content="img-src https://* data:;">
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/styles/main.css">
 <link rel="stylesheet" href="/styles/nav.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="https://oliel-workout.herokuapp.com/manifest.json">
 
 <script src="/scripts/script.js" defer></script>
 <script src="/scripts/display_workout.js" defer></script>
