--- a/views/partials/includes.ejs
+++ b/views/partials/includes.ejs
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/styles/main.css">
 <link rel="stylesheet" href="/styles/nav.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-<link rel="manifest" href="https://oliel-workout.herokuapp.com/manifest.json">
+<link rel="manifest" href="/manifest.json">
 
 <script src="/scripts/script.js" defer></script>
 <script src="/scripts/display_workout.js" defer></script>
