--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,7 @@
     <title>Login - Fitness App</title>
 
     <link rel="stylesheet" href="/styles/login.css">
+    <link rel="manifest" href="manifest.json">
 
     <%- include('partials/includes.ejs') %>
 </head>
