login/register responsive

--- a/public/styles/register.css
+++ b/public/styles/register.css
@@ -7,7 +7,8 @@
     display: inline-block;
     margin-top: 10vh;
     background-color: #4996da;
-    padding: 4vh 7vw 0 7vw;
+    padding: 3vh 0 0 0;
+    width: 40%;
     box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.315);
 }
 
@@ -20,7 +21,7 @@
 .form input {
     border: none;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.315);
-    width: 20vw;
+    width: 60%;
     padding: .8vh 0 .8vh .3vw;
     border-bottom: 1px solid rgba(0, 0, 0, 0.315);
 }
@@ -28,7 +29,7 @@
 .form button {
     padding: 1.2vh 0;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.315);
-    width: 100%;
+    width: 60%;
     cursor: pointer;
     border: none;
     background-color: #003F75;
@@ -36,6 +37,27 @@
 }
 
 .form .login {
-    margin: 6vh 0 1vh 0;
+    margin: 10vh 0 3vh 0;
     color: white;
+}
+
+
+@media (max-width: 1200px) {
+    .form {
+        width: 50%;
+    }
+}
+
+@media (max-width: 768px) {
+    .form {
+        width: 70%;
+    }
+
+    .form input {
+        width: 70%;
+    }
+
+    .form button {
+        width: 70%;
+    }
 }
