--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,11 +23,6 @@
         <a href="/user_define">Start working out</a>
     </div>
 
-
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js');
-        }
-    </script>
+    <script src="/scripts/pwa.js"></script>
 </body>
 </html>
