page & pwa handlers

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,6 +23,6 @@
         <a href="/user_define">Start working out</a>
     </div>
 
-    <script src="/scripts/pwa.js"></script>
+    <script src="/scripts/pwaHandler.js"></script>
 </body>
 </html>
