--- a/views/partials/includes.ejs
+++ b/views/partials/includes.ejs
@@ -5,5 +5,5 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 <link rel="manifest" href="manifest.json">
 
-<script src="/scripts/script.js" defer></script>
+<script src="/scripts/pageHandler.js" defer></script>
 <script src="/scripts/display_workout.js" defer></script>
