--- a/public/styles/workout_selection.css
+++ b/public/styles/workout_selection.css
@@ -1,18 +1,16 @@
-.container {
-    width: 100%;
-    text-align: center;
-}
-
 .form {
-    display: inline-block;
+    width: 60%;
+    padding: 2vh 0 5vh 0;
+    text-align: center;
+    margin: 0 auto;
     margin-top: 10vh;
     background-color: #4996da;
-    padding: 4vh 7vw 0 7vw;
     box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.315);
 }
 
 .form h1 {
     margin-bottom: 2vh;
+    padding-bottom: 1vh;
     font-size: 26px;
     color: white;
     font-weight: 400;
@@ -24,9 +22,30 @@
     border: none;
     color: white;
     font-size: 16px;
-    margin: 10px 10px 5vh 0;
-    padding: 1vh 2vw;
+    width: 40%;
+    padding: 1vh 0;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.315);
     cursor: pointer;
     background-color: #003F75;
+}
+
+@media (max-width: 1100px) {
+    .form h1 {
+        font-size: 20px;
+    }
+
+    .form button {
+        font-size: 13px;
+    }
+}
+
+@media (max-width: 600px) {
+    .form {
+        width: 80%;
+    }
+
+    .form button {
+        width: 45%;
+        height: 50px;
+    }
 }
