--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,9 +9,8 @@
     </div>
 
     <div class="links">
+        <a href="/profile">profile</a>
         <a href="/login">login</a>
-        /
-        <a href="/register">register</a>
     </div>
 
     <!-- MOBILE -->
