--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,11 +4,13 @@
     align-items: center;
     background-color: #255478;
     font-weight: 300;
-    padding: 25px 18px;
+    padding: 1.5rem 0;
 }
 
 .nav div {
     color: #fff;
+    text-align: center;
+    width: 33%;
 }
 
 .nav .main {
@@ -16,7 +18,13 @@
 }
 
 .nav .links {
-    font-size: 18px;
+    text-align: right;
+    padding-right: 5%;
+    font-size: 1.2rem;
+}
+
+.nav .links a {
+    padding: 0 1rem;
 }
 
 .nav .logo img {
@@ -95,6 +103,7 @@
     .drop-down {
         display: flex;
         align-items: center;
+        justify-content: center;
     }
 
     .main {
