nutrition menu page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,6 +28,10 @@
                     <input type="text" value="omerlev66@gmail.com" id="valid" disabled />
                 </div>
             </div>
+
+            <div class="section">
+                <a href="/profile/nutrition">תפריט תזונה</a>
+            </div>
     
             <button onclick="window.location.href = '/'">BACK</button>
             <button>UPDATE PROFILE</button>
