--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,25 +16,78 @@
     <div class="profile">
         <div class="profile-card">
             <img src="/img/guest.png" alt="" />
-    
-            <div class="section">
-                <div class="field">
-                    <label htmlFor="">username:</label>
-                    <input type="text" value="omer" id="valid" disabled />
+            
+            <div class="section-container">
+                <div class="section">
+                    <div class="field">
+                        <label htmlFor="">username:</label>
+                    </div>
+        
+                    <div class="field">
+                        <input type="text" value="omerlev66@gmail.com" id="valid" disabled />
+                    </div>
                 </div>
-    
-                <div class="field">
-                    <label htmlFor="">email:</label>
-                    <input type="text" value="omerlev66@gmail.com" id="valid" disabled />
+        
+                <div class="section">
+                    <div class="field">
+                        <label htmlFor="">height (cm):</label>
+                    </div>
+        
+                    <div class="field">
+                        <input type="number" value="174" id="valid" disabled />
+                    </div>
+                </div>
+        
+                <div class="section">
+                    <div class="field">
+                        <label htmlFor="">weight (kg):</label>
+                    </div>
+        
+                    <div class="field">
+                        <input type="number" value="61" id="valid" disabled />
+                    </div>
+                </div>
+        
+                <div class="section">
+                    <div class="field">
+                        <label htmlFor="">BMI:</label>
+                    </div>
+        
+                    <div class="field">
+                        <input type="number" value="20" id="valid" disabled />
+                    </div>
+                </div>
+        
+                <div class="section">
+                    <div class="field">
+                        <label htmlFor="">current workout:</label>
+                    </div>
+        
+                    <div class="field">
+                        <input type="text" value="FBW / AB" id="valid" disabled />
+                    </div>
+                </div>
+        
+                <div class="section" id="button-section">
+                    <div class="field">
+                        <button>workout</button>
+                    </div>
+        
+                    <div class="field">
+                        <button>nutrition menu</button>
+                    </div>
+                </div>
+
+                <div class="section" id="back">
+                    <button onclick="window.location.href = '/'">BACK</button>
                 </div>
             </div>
 
-            <div class="section">
+
+            <!-- <div class="section">
                 <a href="/profile/nutrition">תפריט תזונה</a>
-            </div>
+            </div> -->
     
-            <button onclick="window.location.href = '/'">BACK</button>
-            <button>UPDATE PROFILE</button>
         </div>
     </div>
 </body>
