profile page ready

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,8 +9,13 @@
     </div>
 
     <div class="links">
-        <a href="/profile">profile</a>
-        <a href="/login">login</a>
+        <% if (!user) { %>
+            <a href="/login">login</a>
+            <a href="/register">register</a>
+        <% } else { %>
+            <a href="/profile">profile</a>
+            <a href="/logout">logout</a>
+        <% } %> 
     </div>
 
     <!-- MOBILE -->
