--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -28,6 +28,7 @@
 }
 
 .profile .profile-card .section {
+    width: 80%;
     display: flex;
     margin: 0 auto;
 }
@@ -35,7 +36,7 @@
 .profile .profile-card .section .field {
     width: 50%;
     text-align: left;
-    padding: .7rem 1rem;
+    padding: .7rem 0;
 }
 
 .profile .profile-card .section .field input {
@@ -48,8 +49,7 @@
 }
 
 .profile .profile-card .section#button-section .field {
-    padding: 2.5rem 1rem;
-    text-align: center;
+    padding: 2.5rem 0;
 }
 
 .profile .profile-card button {
@@ -58,19 +58,18 @@
     color: whitesmoke;
     font-size: 15px;
     font-weight: 500;
-    background-color: #236ca3;
+    background-color: #135690;
 }
 
 .profile .profile-card .section#back button {
-    width: 80%;
+    width: 100%;
     height: 2.5rem;
-    margin: 0 auto;
+    margin: 1rem auto;
     font-weight: 600;
     color: #236ca3;
     background-color: rgba(248, 246, 246, 0.863);
 }
 
 .profile .profile-card .section#back button:hover {
-    /* color: whitesmoke; */
     background-color: rgba(248, 246, 246, 0.671) !important;
 }
