--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,7 +24,7 @@
                     </div>
         
                     <div class="field">
-                        <input type="text" value="omerlev66@gmail.com" id="valid" disabled />
+                        <input type="text" value="<%= user.username %>" id="valid" disabled />
                     </div>
                 </div>
         
@@ -34,7 +34,7 @@
                     </div>
         
                     <div class="field">
-                        <input type="number" value="174" id="valid" disabled />
+                        <input type="number" value="<%= user.height %>" id="valid" disabled />
                     </div>
                 </div>
         
@@ -44,7 +44,7 @@
                     </div>
         
                     <div class="field">
-                        <input type="number" value="61" id="valid" disabled />
+                        <input type="number" value="<%= user.weight %>" id="valid" disabled />
                     </div>
                 </div>
         
@@ -54,7 +54,7 @@
                     </div>
         
                     <div class="field">
-                        <input type="number" value="20" id="valid" disabled />
+                        <input type="number" value="<%= user.BMI %>" id="valid" disabled />
                     </div>
                 </div>
         
@@ -64,13 +64,13 @@
                     </div>
         
                     <div class="field">
-                        <input type="text" value="FBW / AB" id="valid" disabled />
+                        <input type="text" value="<%= user.currentWorkout %>" id="valid" disabled />
                     </div>
                 </div>
         
                 <div class="section" id="button-section">
                     <div class="field">
-                        <button>workout</button>
+                        <button onclick="window.location.href = '/workouts/<%= user.currentWorkout %>'">workout</button>
                     </div>
         
                     <div class="field">
@@ -82,13 +82,11 @@
                     <button onclick="window.location.href = '/'">BACK</button>
                 </div>
             </div>
-
-
-            <!-- <div class="section">
-                <a href="/profile/nutrition">תפריט תזונה</a>
-            </div> -->
-    
         </div>
     </div>
+
+    <script>
+        console.log("<%= user %>");
+    </script>
 </body>
 </html>
